src/test/resources/validation/error/listOfInputWithNestedList/schema.graphqls
type Query {
  customer(id: ID!): Customer
}

type Customer @table {
  id: ID!
  rentalsForInputWithListField(inputWithListField: [InputWithListField!]): [Rental!]! @splitQuery
}

type Rental @table {
  id: ID!
}

input InputWithListField {
  ids: [ID!]!
}
